Employer Project/src/App.css
/*
Your selected colors:

    Primary: #e8e8e8 (RGB: 232, 232, 232)
    Secondary: #050505 (RGB: 5, 5, 5)
    Primary Button: #9c9c9c (RGB: 156, 156, 156)
    Secondary Button: #0f0f0f (RGB: 15, 15, 15)
    Accent: #696969 (RGB: 105, 105, 105)

Realtime Colors link for selected colors: https://realtimecolors.com/?colors=e8e8e8-050505-9c9c9c-0f0f0f-696969

Thanks for using RealtimeColors.com!
*/
@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
.titleFont {
  font-family: 'Passion One', cursive;
}
.leftElement {
  position: absolute;
  left: -1vw;
}
.scoreRow {
  display: flex;
  width: 100%;
  height: 6vh;
  position: relative;
}
.rightElement {
  position: absolute;
  right: 1vw;
}
.mainOuter {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 50vh;
  margin-top: 20vh;
}
.scoreBoardContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
}
.removeBorder {
  border-style: none;
  margin-left: .25vw;
  margin-top: .25vw;
}
.squareBtn {
  width: 6vh;
  height: 6vh;
  background-color: #0d2120;
  border-radius: 1vh;
  color: white;
}
.squareBtn2 {
  width: 3vh;
  height: 3vh;
  background-color: #0d2120;
  border-radius: 1vh;
  color: white;
  position: absolute;
  left: -4.5vh;
  top: 3vh;
}
.selected {
  background-color: #73c9c6;
}
.largeText {
  font-size: 20vh;
  letter-spacing: 5px;
  margin-bottom: 2vh;
  margin-top: 4vh;
}
.mediumText {
  font-size: 5vh;
}
.whiteText {
  color: white;
}
@media only screen and (max-device-width: 600px) and (orientation: portrait) {
  .mediumText {
    font-size: 5vh;
    width: 100%;
  }
  .mainOuter {
    height: 60vh;
  }
}
.rightElementTwo {
  right: 8vw;
  position: absolute;
}
.noMargin {
  margin: 0;
}
.smallText {
  font-size: 2.5vh;
  color: white;
}
.primaryColour {
  color: #e8e8e8;
}
.secondaryColour {
  color: white;
}
.primaryButtonColour {
  background-color: #9c9c9c;
}
.secondaryButtonColour {
  background-color: #0f0f0f;
}
.accentColour {
  background-color: #696969;
}
body {
  background-color: #0d2120;
  font-family: 'Space Mono', monospace;
}
#scoreboard {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-left: 4vh;
  width: 100%;
  height: 100%;
}
.cardOuter {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  width: 10vw;
  height: 30vh;
  border-radius: 2vh;
}
#cardSelections {
  display: flex;
  width: 100%;
  align-items: center;
  margin-top: 2vh;
  margin-bottom: 1vh;
  justify-content: center;
}
.cardHeader {
  font-family: 'Space Mono', monospace;
  color: white;
  font-size: 2.4vh;
  margin-right: 1vw;
}
.header {
  color: white;
}
.hide {
  visibility: hidden;
}
.buttonClass {
  height: 8vh;
  width: 100%;
  border-radius: 2vh;
  transition: all .2s;
  background-color: #73c9c6;
}
input {
  background-color: #0d2120;
  margin-bottom: 2vh;
  border-style: none;
  position: relative;
  width: 93%;
  height: 6vh;
  padding: 2vh;
  border-radius: 1vh;
  font-family: 'Space Mono', monospace;

}
.formContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 24vw;
  background-color: #173b3a;
  padding: 4vh;
  border-radius: 2vh;
}
input:focus {
  border-style: none;
  outline: none;
}
button {
  transition: all .2s;
  font-family: 'Space Mono', monospace;
}
button:hover {
  cursor: pointer;
}
button:active {
  transform: scale(95%);
}
.buttonClass:hover {
  background-color: #73c9c6;
}
.buttonClass:active {
  transform: scale(95%);
}
.gameHolder {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.cardHolder {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-auto-flow: row;
  margin-top: 2vh;
  gap: .2vh;
  height: 50vh;
}

.flipCard {
  animation-name: cardFlip;
  animation-duration: 200ms;
}
@keyframes cardFlip {
  0% {transform: scaleX(100%);}
  50% {transform: scaleX(0%);}
  100% {transform: scaleX(100%);}
}
.cardText {
  font-size: 4vh;
}
.textInCard {
  transform: rotateZ(45deg);
}
.flipBack {
  animation-name: flipBackCardAnimation;
  animation-duration: 300ms;
}
@keyframes flipBackCardAnimation {
  0% {transform: scaleX(100%);}
  50% {transform: scaleX(0%);}
  100% {transform: scaleX(100%);}
}

